# gemini-transcribe

./: .gitignore  README.md  main.py  pyproject.toml
prompts/v1/: base_instructions.txt  handoff_schema.txt  role_schema.txt  style_prefs.txt
src/gemini_transcribe/: __init__.py  cli.py  config.py  gemini_client.py  preprocess.py  prompting.py  render.py  repair.py  segmenter.py  validate.py  workspace.py
templates/: job.example.yaml
