[project]
name = "gemini-transcribe"
version = "0.1.0"
description = "Local Gemini transcription workflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=0.3.0",
    "PyYAML>=6.0.1",
    "rich>=13.9.4",
]

[project.scripts]
transcribe = "gemini_transcribe.cli:main"
